src/main/webapp/css/sentry.css
/* ... */
.full-screen.zoomable .zoomable-shadow {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.7);
	z-index: 999999;
}

zoomable img {
	opacity: 0;
	max-width: 100%;
	height: auto !important;
	transition: opacity 0.3s ease-in-out;
}

zoomable.zoomed img {
	opacity: 1;
}

.zoomable.full-screen img {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	margin: auto auto;
	width: auto !important;
	height: auto !important;
	max-width: 90vw;
	max-height: 90vh;
}

.zoomable .zoomable-title {
	position: absolute;
	margin-top: 5px;
	width: 100%;
	text-align: center;
	color: #888;
	opacity: 0;
	font-size: 0%;
	transition:
		opacity 0.3s ease-in-out,
		font-size 0.3s ease-in-out;
}

.zoomed .zoomable .zoomable-title,
.zoomable.full-screen .zoomable-title {
	opacity: 1;
	font-size: 100%;
}

.zoomable.full-screen .zoomable-title {
	position: fixed;
	bottom: 10px;
	left: 0;
	right: 0;
	margin-left: auto;
	margin-right: auto;
	z-index: 1000000;
	color: white;
	background-color: rgba(0, 0, 0, 0.5);
	padding-top: 10px;
	padding-bottom: 10px;
}

.zoomable .zoomable-control {
	opacity: 0;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	z-index: 1000000;
	padding-top: 5px;
	padding-bottom: 5px;
	padding-right: 10px;
	text-align: right;
	background-color: rgba(0, 0, 0, 0.2);
	transition: opacity 0.3s ease-in-out;
}

.zoomed:hover .zoomable .zoomable-control,
.zoomable.full-screen .zoomable-control {
	opacity: 1;
}

.zoomable .zoomable-control i {
	cursor: pointer;
	padding: 5px;
	font-size: 30px;
	color: rgba(255, 255, 255, 0.6);
	text-shadow: black;
}

.zoomable .zoomable-control i:hover {
	color: white;
}

/**
 * Adjustments of Bootstrap 3 for dark mode
 **/

/* Breadcrumbs */
body.sentry-site .main-content .breadcrumb {
	background: none;
	position: relative;
	z-index: 1;
}

body.sentry-site .main-content .breadcrumb::after {
	content: "";
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: var(--main-fgcolor);
	opacity: 0.05;
	z-index: -1;
	border-radius: 4px;
	pointer-events: none;
}

/* kbd */
body.sentry-site kbd {
	background: none;
	position: relative;
	z-index: 1;
	color: var(--main-bgcolor);
	white-space: nowrap;
}

body.sentry-site kbd::after {
	content: "";
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: var(--main-fgcolor);
	opacity: 0.6;
	z-index: -1;
	border-radius: 3px;
	pointer-events: none;
}

/* Tables */
body.sentry-site .table > tbody > tr {
	background: none;
	position: relative;
	z-index: 1;
}

/* ::after for handling cells' background */
/* (stripes, colors) */
body.sentry-site .table > tbody > tr::after {
	content: "";
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: var(--main-fgcolor);
	opacity: 0;
	pointer-events: none;
	z-index: -2;
}

/* Stripes */
body.sentry-site .table-striped > tbody > tr:nth-of-type(odd)::after {
	opacity: 0.05;
}

/* ::before for handling .hover */
body.sentry-site .table.table-hover tr::before {
	content: "";
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: var(--main-fgcolor);
	opacity: 0;
	pointer-events: none;
	z-index: -1;
}

body.sentry-site .table-hover > tbody > tr:hover::before,
body.sentry-site .table-hover > tbody > tr.active::before {
	opacity: 0.1;
}

body.sentry-site .table-hover > tbody > tr:hover > td,
body.sentry-site .table-hover > tbody > tr:hover > th {
	background: none;
}

/* Prevent Bootstrap from setting colors on cells directly */
body.sentry-site .table > tbody > tr > td,
body.sentry-site .table > tbody > tr > th {
	background-color: inherit;
	color: inherit;
}

/* success, info, warning and danger colors in light and dark mode */
body.sentry-site .table > tbody > tr.success::after {
	background-color: var(--success-bg);
	opacity: 1;
}
body.sentry-site .table > tbody > tr.success {
	color: var(--success-fg);
}

body.sentry-site .table > tbody > tr.info::after {
	background-color: var(--info-bg);
	opacity: 1;
}
body.sentry-site .table > tbody > tr.info {
	color: var(--info-fg);
}

body.sentry-site .table > tbody > tr.warning::after {
	background-color: var(--warning-bg);
	opacity: 1;
}
body.sentry-site .table > tbody > tr.warning {
	color: var(--warning-fg);
}

body.sentry-site .table > tbody > tr.danger::after {
	background-color: var(--danger-bg);
	opacity: 1;
}
body.sentry-site .table > tbody > tr.danger {
	color: var(--danger-fg);
}

body.sentry-site .text-primary {
	color: var(--banner-bgcolor);
}
body.sentry-site .text-success,
body.sentry-site .alert-success {
	color: var(--success-fg);
}
body.sentry-site .text-info,
body.sentry-site .alert-info {
	color: var(--info-fg);
}
body.sentry-site .text-warning,
body.sentry-site .alert-warning {
	color: var(--warning-fg);
}
body.sentry-site .text-danger,
body.sentry-site .alert-danger {
	color: var(--danger-fg);
}

body.sentry-site .bg-primary {
	background-color: var(--banner-bgcolor);
	color: var(--banner-fgcolor);
}

body.sentry-site .bg-success,
body.sentry-site .alert-success {
	background-color: var(--success-bg);
}

body.sentry-site .bg-info,
body.sentry-site .alert-info {
	background-color: var(--info-bg);
}

body.sentry-site .bg-warning,
body.sentry-site .alert-warning {
	background-color: var(--warning-bg);
}

body.sentry-site .bg-danger,
body.sentry-site .alert-danger {
	background-color: var(--danger-bg);
}

/* Navigation bars with list items */
body.sentry-site .parents-xs .list-group-item,
body.sentry-site .home-xs .list-group-item,
body.sentry-site .subtopics-xs .list-group-item,
body.sentry-site .search-results-content-xs .list-group-item {
	background-color: var(--main-bgcolor);
	transition: background-color 1s ease-in-out;
}

/**
 * Angular UI Bootstrap Components
 **/

/* Tabs: remove underline from tab titles */
body.sentry-site .nav-tabs > li > a {
	text-decoration: none;
}
/* ... */

